@@ -33,6 +33,7 @@ namespace IdpGie {
         }
 
         public static int Main (string[] args) {
+
             DirectoryInfo dirInfo = new DirectoryInfo (".");
             foreach (string name in args) {
                 FileInfo[] fInfo = dirInfo.GetFiles (name);
@@ -61,9 +62,11 @@ namespace IdpGie {
                     }
                 }
             }
-            Application.Init ("IdpGie", ref args);
-            using (TopWindow tw = new TopWindow()) {
-                Application.Run ();
+            if (args.Length > 0x00) {
+                Application.Init ("IdpGie", ref args);
+                using (TopWindow tw = new TopWindow()) {
+                    Application.Run ();
+                }
             }
             return 0x00;
         }
