@@ -1,3 +1,15 @@
+2013-10-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* TopWindow.cs:
+	* IdpGie.csproj:
+	* InputContext.cs:
+	* GlobalContext.cs:
+	* IdpGie.userprefs:
+	* IInputContext.cs:
+	* LocalInputContext.cs:
+	* GlobalInputContext.cs:
+	* IdpdMethodAttribute.cs: 
+
 2013-10-15  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* IdpGie.csproj:
